# wechat-bridge

./: .gitignore  CREDITS.md  README.md  bridge.py  install.sh  pyproject.toml
src/wechat_claude_bridge/: __init__.py  cli.py  core.py
src/wechat_codex_bridge/: __init__.py  __main__.py  appserver.py  cli.py  core.py
src/weixin_sdk/: exceptions.py  models.py
