[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-claude-bridge"
version = "0.1.0"
description = "Bridge WeChat messages to Claude Code (and back). Self-contained — includes a vendored copy of the openclaw-weixin Python SDK."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "slock-mock" }]
dependencies = [
  "pycryptodome>=3.20.0",
  "qrcode>=7.4",
]

[project.scripts]
wechat-claude-bridge = "wechat_claude_bridge.cli:main"
wxcc = "wechat_claude_bridge.cli:main"
wechat-codex-bridge = "wechat_codex_bridge.cli:main"
wxcx = "wechat_codex_bridge.cli:main"
weixin-sdk = "weixin_sdk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
